--- a/pos/src/App.css
+++ b/pos/src/App.css
@@ -2,6 +2,18 @@
   text-align: center;
 }
 
+#root,
+body,
+html {
+  margin: 0;
+  padding: 0;
+
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  font-size: 62.5%;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
